--- a/Desktop App/Trial/frmAvailableCoursesForExam.resx
+++ b/Desktop App/Trial/frmAvailableCoursesForExam.resx
@@ -792,4 +792,7 @@
 
 ⑥ Feel free to ask for your course instructor calrifications.</value>
   </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>77</value>
+  </metadata>
 </root>
