--- a/Desktop App/Trial/frmAvailableCoursesForExam.resx
+++ b/Desktop App/Trial/frmAvailableCoursesForExam.resx
@@ -792,6 +792,9 @@
 
 ⑥ Feel free to ask for your course instructor calrifications.</value>
   </data>
+  <metadata name="getInsForStdCourseTableAdapter1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>552, 14</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>77</value>
   </metadata>
